kbase/traefik/namespace.yaml
#! manually added trying to change namespace
apiVersion: v1
kind: Namespace
metadata:
  name: traefik
