kbase/traefik/traefik-ingressroute.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: dashboard
spec:
  entryPoints:
    - websecure
  routes:
    - kind: Rule
      match: Host(`argo.l5ug.nom.cx`)
      priority: 10
      services:
        - name: argocd-server
          port: 80
  tls:
    certResolver: myresolver


  ingressRoute:
    dashboard:
      enabled: true
      matchRule: Host(`traefik.l5ug.nom.cx`)
      entryPoints: ["websecure"]
